@@ -308,7 +308,7 @@ for ease of reading)
 .P
 <dbhost>[:<dbport>[:<dbname>[:<dbtable>[:<dbuser>
 .br
-[:<dbpwd>[:<dbusercol>[:<dbsrvcol>[:<dbportcol>]]]]]]]]
+[:<dbpwd>[:<dbsrvcol>[:<dbusercol>[:<dbportcol>]]]]]]]]
 .P
 E.g.
 .P
@@ -376,7 +376,7 @@ except that the databse name (dbname) is the Datar Source Name (DSN).
 .P
 <dbhost>[:<dbport>[:<DSN>[:<dbtable>[:<dbuser>
 .br
-[:<dbpwd>[:<dbusercol>[:<dbsrvcol>[:<dbportcol>]]]]]]]]
+[:<dbpwd>[:<dbsrvcol>[:<dbusercol>[:<dbportcol>]]]]]]]]
 .P
 E.g.
 .P
